po4a (0.15.4-2) UNRELEASED; urgency=low

  * Fix buglets in doc/po4a.7.pod
  * Replace prefix variable by DESTDIR in debian/rules and po/bin/Makefile
    to follow GNU usage.
  * As told in section 3.1 of the Perl policy, man pages must be installed
    under section 3pm, not 3perl.
  * In debian/rules, the pods target now calls local scripts.

 -- Denis Barbier <barbier@debian.org>  Wed, 26 Nov 2003 20:40:16 +0100

po4a (0.15.4-1) unstable; urgency=low

  * Small fixup to the Sgml.pm
    move <command> to the ignore list to avoid sub-sentence splitup.
    
 -- Martin Quinson <martin.quinson@tuxfamily.org>  Wed,  12 Nov 2003 10:51:59 +0100

po4a (0.15.3-2) unstable; urgency=low

  * Fix lintian issues:
    - Bump standard-version
    - Versionned builddep on debhelper, add debian/compat

 -- Martin Quinson <martin.quinson@tuxfamily.org>  Mon,  10 Nov 2003 14:03:37 +0100

po4a (0.15.3-1) unstable; urgency=low

  * Fix lintian issues:
    debian/control: typo and line too long
    doc/po4a.7.pod: add a NAME section
  * Fix Sgml.pm:
    - apply patch from Francois Gouget to support more docbook tags. Closes
      Savannah's #2353. 
      Add some more tags to parse a sgml file I used to fix the following:
    - Fix references for composite files. Closes Savannah's #6439.
      Do report the right file and line number for composite files.

 -- Martin Quinson <martin.quinson@tuxfamily.org>  Mon,  10 Nov 2003 13:38:38 +0100

po4a (0.15.2-1) unstable; urgency=low

  * Fix savannah's #5139: Bad quoting.
    Quoting is a little nightmare, but I added the provided faulty example
    in the tests, and it is fixed now.

 -- Martin Quinson <martin.quinson@tuxfamily.org>  Fri,  7 Nov 2003 15:59:42 +0100

po4a (0.15.1-1) unstable; urgency=low

  * The long awaited version.
   
  * Fix savannah's #4975: french man page is outdated.
    - This revealed to be a grave bug in the tool itself, leading to the use
      of the fuzzy strings in translation.